bug #27531: 5.1 part of the fix:  - added join cache indication in EXPLAIN (Extra column).  - prefer filesort over full scan over    index for ORDER BY (because it's faster).  - when switching from REF to RANGE because    RANGE uses longer key turn off sort on    the head table only as the resulting    RANGE access is a candidate for join cache    and we don't want to disable it by sorting    on the first table only.